# toxicity-classification

./: .gitignore  Associação e exploração  com word2vec.ipynb  Explicabilidade.ipynb  Exploração e pré-processamentos iniciais 2.ipynb  Exploração e pré-processamentos iniciais.ipynb  Modelos neurais.ipynb  README.md  bert.ipynb  pyproject.toml  tf_idf.ipynb
