[tool.poetry]
name = "mineracao"
version = "0.1.0"
description = ""
authors = ["Rafael Braz <rafael@buscaprev.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.1"
pandas = "^1.3.4"
seaborn = "^0.11.2"
transformers = "^4.11.3"
datasets = "^1.14.0"
ipywidgets = "^7.6.5"
sklearn = "^0.0"
imblearn = "^0.0"
nltk = "^3.6.5"
contractions = "^0.0.58"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
